[tool.poetry]
name = "gan"
version = "0.1.0"
description = ""
authors = ["Takshan <mrbrahma.rahul@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
poetry2setup = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
